--- a/scm-webapp/pom.xml
+++ b/scm-webapp/pom.xml
@@ -25,22 +25,22 @@
     </dependency>
 
     <!-- fix javadoc -->
-    
-    <dependency>    
+
+    <dependency>
       <groupId>javax.transaction</groupId>
       <artifactId>jta</artifactId>
       <version>1.1</version>
       <scope>provided</scope>
     </dependency>
-    
+
     <!-- scm -->
-    
+
     <dependency>
       <groupId>sonia.scm</groupId>
       <artifactId>scm-core</artifactId>
       <version>1.58-SNAPSHOT</version>
     </dependency>
-    
+
     <dependency>
       <groupId>sonia.scm</groupId>
       <artifactId>scm-dao-xml</artifactId>
@@ -64,7 +64,7 @@
       <artifactId>scm-git-plugin</artifactId>
       <version>1.58-SNAPSHOT</version>
     </dependency>
-    
+
     <!-- security -->
 
     <dependency>
@@ -72,7 +72,7 @@
       <artifactId>shiro-web</artifactId>
       <version>${shiro.version}</version>
     </dependency>
-            
+
     <dependency>
       <groupId>org.apache.shiro</groupId>
       <artifactId>shiro-guice</artifactId>
@@ -116,13 +116,13 @@
       <!-- included by dependency rewrite -->
       <scope>provided</scope>
     </dependency>
-    
+
     <dependency>
       <groupId>com.sun.jersey.contribs</groupId>
       <artifactId>jersey-multipart</artifactId>
       <version>${jersey.version}</version>
     </dependency>
-    
+
     <!-- injection -->
 
     <dependency>
@@ -130,26 +130,26 @@
       <artifactId>guice-multibindings</artifactId>
       <version>${guice.version}</version>
     </dependency>
-    
+
     <!-- logging -->
 
     <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
     </dependency>
-    
+
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>jcl-over-slf4j</artifactId>
       <version>${slf4j.version}</version>
     </dependency>
-    
+
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>log4j-over-slf4j</artifactId>
       <version>${slf4j.version}</version>
     </dependency>
-    
+
     <!-- cache -->
 
     <dependency>
@@ -157,46 +157,46 @@
       <artifactId>ehcache-core</artifactId>
       <version>${ehcache.version}</version>
     </dependency>
-    
+
     <!--
     fix java.lang.NoClassDefFoundError org/w3c/dom/ElementTraversal
     -->
-    
+
     <dependency>
       <groupId>xml-apis</groupId>
       <artifactId>xml-apis</artifactId>
       <version>1.4.01</version>
     </dependency>
-    
+
     <!-- only for BeanComparator, replace with own implementation -->
-    
+
     <dependency>
       <groupId>commons-beanutils</groupId>
       <artifactId>commons-beanutils</artifactId>
     </dependency>
-    
+
     <dependency>
       <groupId>commons-collections</groupId>
       <artifactId>commons-collections</artifactId>
     </dependency>
-    
-    <!-- 
-      fix installation of httpasswd-plugin 
+
+    <!--
+      fix installation of httpasswd-plugin
       https://groups.google.com/d/topic/scmmanager/eN7UtG8TwW8/discussion
     -->
-    
+
     <dependency>
       <groupId>commons-codec</groupId>
       <artifactId>commons-codec</artifactId>
       <version>1.9</version>
     </dependency>
-   
+
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <version>${guava.version}</version>
     </dependency>
-    
+
     <dependency>
       <groupId>org.quartz-scheduler</groupId>
       <artifactId>quartz</artifactId>
@@ -208,7 +208,7 @@
         </exclusion>
       </exclusions>
     </dependency>
-    
+
     <!-- template engine -->
 
     <dependency>
@@ -216,7 +216,7 @@
       <artifactId>freemarker</artifactId>
       <version>${freemarker.version}</version>
     </dependency>
-    
+
     <dependency>
       <groupId>com.github.spullara.mustache.java</groupId>
       <artifactId>compiler</artifactId>
@@ -226,13 +226,13 @@
     <!-- aether -->
 
     <dependency>
-      <groupId>org.sonatype.aether</groupId>
+      <groupId>org.eclipse.aether</groupId>
       <artifactId>aether-api</artifactId>
       <version>${aether.version}</version>
     </dependency>
 
     <dependency>
-      <groupId>org.sonatype.aether</groupId>
+      <groupId>org.eclipse.aether</groupId>
       <artifactId>aether-impl</artifactId>
       <version>${aether.version}</version>
     </dependency>
@@ -250,19 +250,25 @@
     </dependency>
 
     <dependency>
-      <groupId>org.sonatype.aether</groupId>
-      <artifactId>aether-connector-asynchttpclient</artifactId>
+      <groupId>org.eclipse.aether</groupId>
+      <artifactId>aether-transport-http</artifactId>
       <version>${aether.version}</version>
     </dependency>
-    
+
     <dependency>
-      <groupId>org.sonatype.aether</groupId>
-      <artifactId>aether-connector-file</artifactId>
+      <groupId>org.eclipse.aether</groupId>
+      <artifactId>aether-transport-file</artifactId>
       <version>${aether.version}</version>
     </dependency>
-    
+
+    <dependency>
+      <groupId>org.eclipse.aether</groupId>
+      <artifactId>aether-connector-basic</artifactId>
+      <version>${aether.version}</version>
+    </dependency>
+
     <!-- rest documentation -->
-    
+
     <dependency>
       <groupId>com.webcohesion.enunciate</groupId>
       <artifactId>enunciate-core-annotations</artifactId>
@@ -283,7 +289,7 @@
         </exclusion>
       </exclusions>
     </dependency>
-    
+
     <dependency>
       <groupId>sonia.scm.plugins</groupId>
       <artifactId>scm-git-plugin</artifactId>
@@ -291,7 +297,7 @@
       <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
-    
+
     <dependency>
       <groupId>sonia.scm.plugins</groupId>
       <artifactId>scm-hg-plugin</artifactId>
@@ -299,7 +305,7 @@
       <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
-    
+
     <dependency>
       <groupId>sonia.scm.plugins</groupId>
       <artifactId>scm-svn-plugin</artifactId>
@@ -307,7 +313,7 @@
       <classifier>tests</classifier>
       <scope>test</scope>
     </dependency>
-    
+
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>selenium-java</artifactId>
@@ -321,7 +327,7 @@
       <version>${selenium.version}</version>
       <scope>test</scope>
     </dependency>
-    
+
     <dependency>
       <groupId>org.seleniumhq.selenium</groupId>
       <artifactId>htmlunit-driver</artifactId>
@@ -342,23 +348,23 @@
       <version>${jersey.version}</version>
       <scope>test</scope>
     </dependency>
-    
+
     <dependency>
       <groupId>com.github.sdorra</groupId>
       <artifactId>shiro-unit</artifactId>
       <version>1.0.0</version>
       <scope>test</scope>
     </dependency>
-    
+
     <!-- global excludes -->
-    
+
     <dependency>
       <groupId>commons-logging</groupId>
       <artifactId>commons-logging</artifactId>
       <version>1.1.3</version>
       <scope>provided</scope>
     </dependency>
-    
+
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
@@ -371,7 +377,7 @@
   <build>
 
     <plugins>
-    
+
       <plugin>
         <groupId>com.mycila.maven-license-plugin</groupId>
         <artifactId>maven-license-plugin</artifactId>
@@ -393,7 +399,7 @@
           <strictCheck>true</strictCheck>
         </configuration>
       </plugin>
-      
+
 
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -412,7 +418,7 @@
           </execution>
         </executions>
       </plugin>
-      
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-antrun-plugin</artifactId>
@@ -444,7 +450,7 @@
           </execution>
         </executions>
       </plugin>
-      
+
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
@@ -513,8 +519,8 @@
           <encoding>${project.build.sourceEncoding}</encoding>
           <scanIntervalSeconds>0</scanIntervalSeconds>
         </configuration>
-      </plugin>        
-      
+      </plugin>
+
     </plugins>
 
     <finalName>scm-webapp</finalName>
@@ -526,9 +532,9 @@
     <environment.profile>default</environment.profile>
     <selenium.version>2.53.1</selenium.version>
     <enunciate.version>2.9.1</enunciate.version>
-    <aether.version>1.13.1</aether.version>
+    <aether.version>1.1.0</aether.version>
     <wagon.version>1.0</wagon.version>
-    <maven.version>3.0.5</maven.version>
+    <maven.version>3.3.9</maven.version>
     <mustache.version>0.8.17</mustache.version>
     <netbeans.hint.deploy.server>Tomcat</netbeans.hint.deploy.server>
     <sonar.issue.ignore.multicriteria>e1</sonar.issue.ignore.multicriteria>
@@ -538,18 +544,18 @@
   </properties>
 
   <profiles>
-    
+
     <profile>
       <id>cluster</id>
-      
+
       <dependencies>
-        
+
         <dependency>
           <groupId>sonia.scm</groupId>
           <artifactId>scm-dao-orientdb</artifactId>
           <version>1.58-SNAPSHOT</version>
         </dependency>
-        
+
       </dependencies>
     </profile>
 
@@ -679,29 +685,29 @@
               </execution>
             </executions>
           </plugin>
-          
+
         </plugins>
       </build>
 
     </profile>
-    
+
     <profile>
       <id>selenium</id>
-          
+
       <dependencies>
-        
+
         <dependency>
           <groupId>org.apache.httpcomponents</groupId>
           <artifactId>httpclient</artifactId>
           <version>4.3.2</version>
           <scope>test</scope>
         </dependency>
-        
+
       </dependencies>
-          
+
       <build>
         <plugins>
-          
+
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-failsafe-plugin</artifactId>
@@ -726,7 +732,7 @@
               </execution>
             </executions>
           </plugin>
-          
+
           <plugin>
             <groupId>org.mortbay.jetty</groupId>
             <artifactId>jetty-maven-plugin</artifactId>
@@ -770,7 +776,7 @@
               </execution>
             </executions>
           </plugin>
-          
+
           <plugin>
             <groupId>org.codehaus.mojo</groupId>
             <artifactId>selenium-maven-plugin</artifactId>
@@ -791,22 +797,22 @@
                 <phase>post-integration-test</phase>
                 <goals>
                   <goal>stop-server</goal>
-                </goals>                
+                </goals>
               </execution>
             </executions>
           </plugin>
-          
+
         </plugins>
       </build>
-      
+
     </profile>
-    
+
     <profile>
       <id>doc</id>
-      
+
       <build>
         <plugins>
-          
+
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-resources-plugin</artifactId>
@@ -820,7 +826,7 @@
                 </goals>
                 <configuration>
                   <outputDirectory>${project.build.directory}</outputDirectory>
-                  <resources>          
+                  <resources>
                     <resource>
                       <directory>src/main/doc</directory>
                       <filtering>true</filtering>
@@ -828,12 +834,12 @@
                         <include>**/enunciate.xml</include>
                       </includes>
                     </resource>
-                  </resources>              
-                </configuration>            
+                  </resources>
+                </configuration>
               </execution>
             </executions>
           </plugin>
-          
+
           <plugin>
             <groupId>com.webcohesion.enunciate</groupId>
             <artifactId>enunciate-maven-plugin</artifactId>
@@ -865,7 +871,7 @@
               </dependency>
             </dependencies>
           </plugin>
-          
+
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-assembly-plugin</artifactId>
@@ -884,12 +890,12 @@
               </execution>
             </executions>
           </plugin>
-          
+
         </plugins>
       </build>
     </profile>
 
   </profiles>
-  
+
 </project>
 
