--- a/scm-plugin-backend/pom.xml
+++ b/scm-plugin-backend/pom.xml
@@ -6,13 +6,13 @@
   <parent>
     <artifactId>scm</artifactId>
     <groupId>sonia.scm</groupId>
-    <version>1.59-SNAPSHOT</version>
+    <version>1.59</version>
   </parent>
 
   <groupId>sonia.scm</groupId>
   <artifactId>scm-plugin-backend</artifactId>
   <packaging>war</packaging>
-  <version>1.59-SNAPSHOT</version>
+  <version>1.59</version>
   <name>${project.artifactId}</name>
 
   <dependencies>
@@ -62,7 +62,7 @@
     <dependency>
       <groupId>sonia.scm</groupId>
       <artifactId>scm-core</artifactId>
-      <version>1.59-SNAPSHOT</version>
+      <version>1.59</version>
     </dependency>
 
     <dependency>
